Prevent x overflow.
This also seems to help with vertical animations on mobile, though it is unclear why.

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -30,10 +30,12 @@ body{
   width: 100%;
   height: 100%;
   overflow: visible;
-  overflow-x: hidden;
   box-sizing: border-box;
 }
 
+#__layout{
+  overflow-x: hidden;
+}
 
 section{
     background-color: $color_white;
